--- a/ReceiptVault/ReceiptVault/MainPage.xaml
+++ b/ReceiptVault/ReceiptVault/MainPage.xaml
@@ -25,8 +25,12 @@
             <Image x:Name="image_Copy1" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/spending.bmp" Margin="10,78,0,-68"/>
             <Image x:Name="image_Copy2" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/graph.png" Margin="10,113,0,-103"/>
         </RelativePanel>
-        <ScrollViewer Margin="142,127,0,0"/>
         <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Margin="209,10,0,0" FontSize="48"/>
+        <ScrollViewer Margin="209,127,0,0" VerticalScrollBarVisibility="Auto">
+            <controls:WrapPanel x:Name="panelReceipts" Margin="142,10,10,10" Width="Auto" HorizontalAlignment="Left">
+                <TextBlock Text="Here is the news that should wrap around." TextWrapping="Wrap"/>
+            </controls:WrapPanel>
+        </ScrollViewer>
     </Grid>
 </Page>
     
