--- a/ReceiptVault/ReceiptVault/spendingsScreen.xaml
+++ b/ReceiptVault/ReceiptVault/spendingsScreen.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:system="using:System"
     xmlns:charting="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Width="1706" Height="906">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <RelativePanel HorizontalAlignment="Left" Height="1080" Width="204
@@ -34,7 +34,7 @@
         <ComboBox x:Name="comboBoxYear" HorizontalAlignment="Left" Width="188" Margin="1036,732,0,0" Height="38" SelectionChanged="ComboBoxWeek_OnSelectionChanged"/>
 
 
-        <charting:Chart x:Name="spendingChart" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,160,88,0" Width="948" Height="547">
+        <charting:Chart x:Name="spendingChart" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,155,271,0" Width="948" Height="547">
             <charting:ColumnSeries x:Name="spendings" Title="Uitgaves in euro" Margin="0" IndependentValuePath="Date" DependentValuePath="Total" IsSelectionEnabled="true"/>
         </charting:Chart>
 
