--- a/ReceiptVault/ReceiptVault/VATScreen.xaml
+++ b/ReceiptVault/ReceiptVault/VATScreen.xaml
@@ -31,6 +31,7 @@
               Width="320" />
 
         <Charting:Chart x:Name="VATChart" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,139,37,0" Width="681" Height="421">
+            <Charting:ColumnSeries DependentValuePath="VATpercentage" IndependentValuePath="Date" Title="Betaalde btw in euro"></Charting:ColumnSeries>
         </Charting:Chart>
 
         <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="664,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="-0.419,0.24">
